<resources>
    <string name="app_name">重寻</string>
    <string name="login_title">登录</string>
    <string name="page_content">卡片内容</string>
    <string name="publish_article">发布文章</string>
    <string name="message_center">消息中心</string>
    <string name="exit_login">退出登录</string>
    <string name="exchange_login">切换账号</string>
    <string name="poi_no_result">没有搜索到结果</string>
    <string name="delete_article_title">删除文章</string>
    <string name="delete_user_title">删除用户</string>
    <string name="search_view">页面搜索</string>

    <!--tab标题-->
    <string name="home_page">首页</string>
    <string name="record">寻记</string>
    <string name="tech">寻技</string>
    <string name="track">寻迹</string>

    <!--发布文章页面中文-->
    <string name="article_image">*添加图片</string>
    <string name="article_title">*添加标题</string>
    <string name="article_brief">*文章简介</string>
    <string name="article_content">*文章内容</string>
    <string name="article_location">*地点</string>
    <string name="poi_search">定位</string>
    <!-- 注册页面中文 -->
    <string name="register_title">注册</string>
    <string name="email_address">电子邮箱：</string>
    <string name="tel">*手机号码：</string>
    <string name="username">*昵称：</string>
    <string name="password">*登录密码：</string>
    <string name="confirm_password">*确认密码：</string>
    <string name="tel_confirm_number">*短信验证码：</string>
    <string name="get_tel_confirm_num">获取验证码</string>
    <string name="confirm_number">*验证码：</string>
    <string name="register_head">欢迎加入重寻</string>
    <string name="error_invalid_email">此邮箱地址不合法</string>
    <string name="error_invalid_password">此密码不合法</string>
    <string name="error_invalid_tel">此号码不合法</string>
    <string name="error_incorrect_password">密码错误</string>

    <!--侧滑菜单子菜单中文-->
    <string name="collected">发布与收藏</string>
    <string name="publish">发布</string>
    <string name="love">收藏</string>
    <string name="personal_info">个人资料</string>
    <string name="personal_info_edit">编辑资料</string>
    <string name="personal_info_save">保存</string>
    <string name="personal_info_account">ID：</string>
    <string name="personal_info_username">用户名：</string>
    <string name="personal_info_phone">手机号码：</string>
    <string name="personal_info_email">邮箱：</string>
    <string name="personal_info_sex">性别：</string>
    <string name="settings">设置中心</string>
    <string name="feed_back">反馈中心</string>
    <string name="manage">审核与管理</string>

    <!--寻记页面中文-->
    <string name="genealogy_order">家谱订制</string>
    <string name="genealogy_show">家谱展示</string>
    <string name="share">分享</string>

    <!--寻迹页面中文-->
    <string name="near_village">附近村落</string>
    <string name="village_protection">村落保护</string>
</resources>
