<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <include layout="@layout/page_module_toolbar"/>

    <LinearLayout
        android:layout_width="@dimen/activity_personal_info_width"
        android:layout_height="@dimen/activity_personal_info_item_height"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="@dimen/activity_personal_info_item_divider_size">

        <TextView
            android:layout_width="@dimen/activity_personal_info_item_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/personal_info_username"/>

        <com.example.xupeng.xunji.utils.MyEditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_personal_up_divider_size"
            android:background="@null"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/activity_personal_info_width"
        android:layout_height="@dimen/activity_personal_info_item_height"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="@dimen/activity_personal_info_item_divider_size">

        <TextView
            android:layout_width="@dimen/activity_personal_info_item_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/personal_info_phone"/>

        <TextView
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_personal_up_divider_size"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/activity_personal_info_width"
        android:layout_height="@dimen/activity_personal_info_item_height"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="@dimen/activity_personal_info_item_divider_size">

        <TextView
            android:layout_width="@dimen/activity_personal_info_item_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/personal_info_email"/>

        <com.example.xupeng.xunji.utils.MyEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_personal_up_divider_size"
            android:background="@null"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/activity_personal_info_width"
        android:layout_height="@dimen/activity_personal_info_item_height"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/activity_personal_info_item_divider_size">

        <TextView
            android:layout_width="@dimen/activity_personal_info_item_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/personal_info_sex"/>

        <Spinner
            android:id="@+id/spinner_sex"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_personal_up_divider_size"
            android:gravity="center"
            android:entries="@array/sexSpinnerArray"/>
    </LinearLayout>

    <Button
        android:id="@+id/edit_save"
        android:layout_width="@dimen/activity_personal_info_width"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_personal_info_edit_button_height"
        android:text="@string/personal_info_save"
        android:textColor="@color/darkOrange"
        android:textSize="@dimen/activity_personal_choose_text_size"/>
</LinearLayout>