<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/page_module_toolbar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:layout_marginTop="@dimen/activity_personal_info_item_divider_size"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <com.angel.view.SWImageView
            android:id="@+id/user_head_image"
            android:layout_width="@dimen/activity_personal_info_head_image"
            android:layout_height="@dimen/activity_personal_info_head_image"
            android:layout_gravity="center_horizontal"
            app:type="circle"
            android:clickable="true"
            android:focusable="true"/>

        <LinearLayout
            android:layout_width="@dimen/activity_personal_info_width"
            android:layout_height="@dimen/activity_personal_info_item_height"
            android:layout_marginTop="@dimen/activity_personal_info_item_divider_size"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/activity_personal_info_item_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/personal_info_account" />

            <TextView
                android:id="@+id/user_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/activity_personal_up_divider_size"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/activity_personal_info_width"
            android:layout_height="@dimen/activity_personal_info_item_height"
            android:layout_marginTop="@dimen/activity_personal_info_item_divider_size"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/activity_personal_info_item_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/personal_info_username" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/activity_personal_up_divider_size"
                android:gravity="center" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="@dimen/activity_personal_info_width"
            android:layout_height="@dimen/activity_personal_info_item_height"
            android:layout_marginTop="@dimen/activity_personal_info_item_divider_size"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/activity_personal_info_item_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/personal_info_phone" />

            <TextView
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/activity_personal_up_divider_size"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/activity_personal_info_width"
            android:layout_height="@dimen/activity_personal_info_item_height"
            android:layout_marginTop="@dimen/activity_personal_info_item_divider_size"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/activity_personal_info_item_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/personal_info_email" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/activity_personal_up_divider_size"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/activity_personal_info_width"
            android:layout_height="@dimen/activity_personal_info_item_height"
            android:layout_marginTop="@dimen/activity_personal_info_item_divider_size"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/activity_personal_info_item_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/personal_info_sex" />

            <TextView
                android:id="@+id/user_sex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/activity_personal_up_divider_size"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/edit_personal_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_personal_info_edit_button_height"
        android:layout_gravity="bottom"
        android:text="@string/personal_info_edit"
        android:textColor="@color/darkOrange"
        android:background="@color/brightGray"/>
</LinearLayout>