<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/register_bg">

    <LinearLayout
        android:layout_width="@dimen/activity_login_total_width"
        android:layout_height="@dimen/activity_login_total_height"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/activity_login_other_login_image_height"
        android:background="@drawable/register_bg_color"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_main_margin1"
            android:layout_marginTop="@dimen/activity_register_top_margin"
            android:text="@string/register_head"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_register_head_text_size"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="500dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_register_divider"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_register_edit_text_height"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/activity_register_left_tv_size"
                    android:layout_height="@dimen/activity_register_edit_text_height"
                    android:gravity="center_vertical"
                    android:text="@string/username"
                    android:textColor="@color/brightGray"
                    android:textSize="@dimen/activity_register_left_tv_text_size" />

                <com.example.xupeng.xunji.utils.MyEditText
                    android:id="@+id/register_username"
                    android:layout_width="@dimen/activity_register_edit_text_width"
                    android:layout_height="@dimen/activity_register_edit_text_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_login_vertical_divider_size"
                    android:background="@drawable/edit_style"
                    android:textColor="@color/brightGray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_register_edit_text_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_register_divider"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/activity_register_left_tv_size"
                    android:layout_height="@dimen/activity_register_edit_text_height"
                    android:gravity="center_vertical"
                    android:text="@string/password"
                    android:textColor="@color/brightGray"
                    android:textSize="@dimen/activity_register_left_tv_text_size" />

                <LinearLayout
                    android:layout_width="@dimen/activity_register_edit_text_width"
                    android:layout_height="@dimen/activity_register_edit_text_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_login_vertical_divider_size"
                    android:background="@drawable/edit_style">

                    <com.example.xupeng.xunji.utils.MyEditText
                        android:id="@+id/register_password"
                        android:layout_width="@dimen/activity_register_edit_password_text_width"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:background="@null"
                        android:textColor="@color/brightGray"/>
                    <ImageView
                        android:id="@+id/show_register_password"
                        android:layout_width="@dimen/activity_login_other_login_image_width"
                        android:layout_height="match_parent"
                        android:src="@mipmap/hide_pwd"
                        android:clickable="true"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_register_edit_text_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_register_divider"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/activity_register_left_tv_size"
                    android:layout_height="@dimen/activity_register_edit_text_height"
                    android:gravity="center_vertical"
                    android:text="@string/confirm_password"
                    android:textColor="@color/brightGray"
                    android:textSize="@dimen/activity_register_left_tv_text_size" />

                <LinearLayout
                    android:layout_width="@dimen/activity_register_edit_text_width"
                    android:layout_height="@dimen/activity_register_edit_text_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_login_vertical_divider_size"
                    android:background="@drawable/edit_style">

                    <com.example.xupeng.xunji.utils.MyEditText
                        android:id="@+id/register_confirm_pwd"
                        android:layout_width="@dimen/activity_register_edit_password_text_width"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:background="@null"
                        android:textColor="@color/brightGray"/>

                    <ImageView
                        android:id="@+id/show_register_confirm_password"
                        android:layout_width="@dimen/activity_login_other_login_image_width"
                        android:layout_height="match_parent"
                        android:src="@mipmap/hide_pwd"
                        android:clickable="true"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_register_edit_text_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_register_divider"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/activity_register_left_tv_size"
                    android:layout_height="@dimen/activity_register_edit_text_height"
                    android:gravity="center_vertical"
                    android:text="@string/tel"
                    android:textColor="@color/brightGray"
                    android:textSize="@dimen/activity_register_left_tv_text_size" />

                <com.example.xupeng.xunji.utils.MyEditText
                    android:id="@+id/register_tel"
                    android:layout_width="@dimen/activity_register_edit_text_width"
                    android:layout_height="@dimen/activity_register_edit_text_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_login_vertical_divider_size"
                    android:background="@drawable/edit_style"
                    android:inputType="phone"
                    android:textColor="@color/brightGray"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_register_edit_text_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_register_divider"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/activity_register_left_tv_size"
                    android:layout_height="@dimen/activity_register_edit_text_height"
                    android:gravity="center_vertical"
                    android:text="@string/tel_confirm_number"
                    android:textColor="@color/brightGray"
                    android:textSize="@dimen/activity_register_left_tv_text_size" />

                <com.example.xupeng.xunji.utils.MyEditText
                    android:id="@+id/tel_confirm_num"
                    android:layout_width="@dimen/activity_register_confirm_code_edit_width"
                    android:layout_height="@dimen/activity_register_edit_text_height"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/edit_style"
                    android:inputType="number"
                    android:textColor="@color/brightGray"/>

                <Button
                    android:id="@+id/get_tel_confirm_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/activity_main_margin1"
                    android:background="@color/darkOrange"
                    android:text="@string/get_tel_confirm_num"
                    android:textColor="@color/brightGray"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_register_edit_text_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_register_divider"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/activity_register_left_tv_size"
                    android:layout_height="@dimen/activity_register_edit_text_height"
                    android:gravity="center_vertical"
                    android:text="@string/confirm_number"
                    android:textColor="@color/brightGray"
                    android:textSize="@dimen/activity_register_left_tv_text_size" />

                <com.example.xupeng.xunji.utils.MyEditText
                    android:id="@+id/confirm_number"
                    android:layout_width="@dimen/activity_register_confirm_code_edit_width"
                    android:layout_height="@dimen/activity_register_edit_text_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_login_vertical_divider_size"
                    android:background="@drawable/edit_style"
                    android:textColor="@color/brightGray"/>

                <ImageView
                    android:id="@+id/confirm_number_image"
                    android:layout_width="@dimen/activity_register_confirm_code_image_width"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/activity_main_margin1"
                    android:clickable="true" />
            </LinearLayout>

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_register_divider"
                android:background="@color/darkOrange"
                android:text="@string/register_title"
                android:textSize="@dimen/activity_register_head_text_size"
                android:textColor="@color/brightGray"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_register_edit_text_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_register_divider"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="已有账号？点击这里"
                    android:layout_toStartOf="@id/register_login_btn"
                    android:textColor="@color/brightGray"/>

                <TextView
                    android:id="@+id/register_login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title"
                    android:textSize="@dimen/activity_main_second_divider_time"
                    android:textColor="@color/darkOrange"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/activity_main_margin2"
                    android:clickable="true"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>